versioned_docs/version-3.18/requirements.mdx
---
tags:
  - Community
  - Enterprise Standard
  - Enterprise Premium
displayed_sidebar: docsEnglish
---

# Requirements

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import JDKVersions from './components/_prerequisites-jdk-versions.mdx';

This page outlines the requirements for using each ScalarDB component, including the programming languages and their versions, supported databases and their versions, and the necessary configurations.

## Core

ScalarDB Core is a key component of ScalarDB, providing a database manager with an abstraction layer that abstracts underlying databases. For more information, see [ScalarDB Design](./design.mdx).

### Languages and runtimes

ScalarDB Core provides a Java client SDK for interacting with ScalarDB. It also includes tools, such as Schema Loader and Data Loader, which run on the Java Virtual Machine (JVM).

#### Java

The ScalarDB Core library is available on the Maven Central Repository. You can add the library as a build dependency to your application by using Gradle or Maven. For more details, see [Add ScalarDB to Your Build](./add-scalardb-to-your-build.mdx).

For building applications that integrate with the library, the following Java Development Kits (JDKs) are verified and supported.

<JDKVersions versionNumbers="8, 11, 17, or 21" />

Java Runtime Environments (JREs) of these JDKs are also supported for running the tools.

### Databases

ScalarDB runs on top of the following databases and their versions.

#### Relational databases

<Tabs groupId="RDBs" queryString>
<TabItem value="Db2" label="IBM Db2" default>

|      Version      | Db2 12.1 | Db2 11.5 |
| :---------------- | :------- | :------- |
| **ScalarDB 3.18** | ✅        | ✅        |
| **ScalarDB 3.17** | ✅        | ✅        |
| **ScalarDB 3.16** | ✅        | ✅        |
| **ScalarDB 3.15** | ❌        | ❌        |
| **ScalarDB 3.14** | ❌        | ❌        |

:::note

Only Linux, UNIX, and Windows versions of Db2 are supported. The z/OS version is not currently supported.

:::

</TabItem>
<TabItem value="MariaDB" label="MariaDB">

|      Version      | MariaDB 11.4 | MariaDB 10.11 |
| :---------------- | :----------- | :------------ |
| **ScalarDB 3.18** | ✅            | ✅             |
| **ScalarDB 3.17** | ✅            | ✅             |
| **ScalarDB 3.16** | ✅            | ✅             |
| **ScalarDB 3.15** | ✅            | ✅             |
| **ScalarDB 3.14** | ✅            | ✅             |

</TabItem>
<TabItem value="MySQL" label="MySQL">

|      Version      | MySQL 8.4 | MySQL 8.0 |
| :---------------- | :-------- | :-------- |
| **ScalarDB 3.18** | ✅         | ✅         |
| **ScalarDB 3.17** | ✅         | ✅         |
| **ScalarDB 3.16** | ✅         | ✅         |
| **ScalarDB 3.15** | ✅         | ✅         |
| **ScalarDB 3.14** | ✅         | ✅         |

</TabItem>
<TabItem value="Oracle_Database" label="Oracle Database">

|      Version      | Oracle Database 23ai | Oracle Database 21c | Oracle Database 19c |
| :---------------- | :------------------- | :------------------ | :------------------ |
| **ScalarDB 3.18** | ✅                    | ✅                   | ✅                   |
| **ScalarDB 3.17** | ✅                    | ✅                   | ✅                   |
| **ScalarDB 3.16** | ✅                    | ✅                   | ✅                   |
| **ScalarDB 3.15** | ✅                    | ✅                   | ✅                   |
| **ScalarDB 3.14** | ✅                    | ✅                   | ✅                   |

</TabItem>
<TabItem value="PostgreSQL" label="PostgreSQL">

|      Version      | PostgreSQL 17 | PostgreSQL 16 | PostgreSQL 15 | PostgreSQL 14 | PostgreSQL 13 |
| :---------------- | :------------ | :------------ | :------------ | :------------ | ------------- |
| **ScalarDB 3.18** | ✅             | ✅             | ✅             | ✅             | ✅             |
| **ScalarDB 3.17** | ✅             | ✅             | ✅             | ✅             | ✅             |
| **ScalarDB 3.16** | ✅             | ✅             | ✅             | ✅             | ✅             |
| **ScalarDB 3.15** | ✅             | ✅             | ✅             | ✅             | ✅             |
| **ScalarDB 3.14** | ✅             | ✅             | ✅             | ✅             | ✅             |

</TabItem>
<TabItem value="SQL_Server" label="SQL Server">

|      Version      | SQL Server 2022 | SQL Server 2019 | SQL Server 2017 |
| :---------------- | :-------------- | :-------------- | :-------------- |
| **ScalarDB 3.18** | ✅               | ✅               | ✅               |
| **ScalarDB 3.17** | ✅               | ✅               | ✅               |
| **ScalarDB 3.16** | ✅               | ✅               | ✅               |
| **ScalarDB 3.15** | ✅               | ✅               | ✅               |
| **ScalarDB 3.14** | ✅               | ✅               | ✅               |

</TabItem>
<TabItem value="SQLite" label="SQLite">

|      Version      | SQLite 3 |
| :---------------- | :------- |
| **ScalarDB 3.18** | ✅        |
| **ScalarDB 3.17** | ✅        |
| **ScalarDB 3.16** | ✅        |
| **ScalarDB 3.15** | ✅        |
| **ScalarDB 3.14** | ✅        |

</TabItem>
</Tabs>

#### NewSQL databases

<Tabs groupId="NewSQL" queryString>
<TabItem value="AlloyDB" label="AlloyDB" default>

| Version           | AlloyDB 16 | AlloyDB 15 |
|:------------------|:-----------|:-----------|
| **ScalarDB 3.18** | ✅          | ✅          |
| **ScalarDB 3.17** | ✅          | ✅          |
| **ScalarDB 3.16** | ❌          | ❌          |
| **ScalarDB 3.15** | ❌          | ❌          |
| **ScalarDB 3.14** | ❌          | ❌          |

</TabItem>
<TabItem value="Amazon_Aurora_MySQL" label="Amazon Aurora MySQL" default>

|      Version      | Aurora MySQL 3 | Aurora MySQL 2 |
| :---------------- | :------------- | :------------- |
| **ScalarDB 3.18** | ✅              | ✅              |
| **ScalarDB 3.17** | ✅              | ✅              |
| **ScalarDB 3.16** | ✅              | ✅              |
| **ScalarDB 3.15** | ✅              | ✅              |
| **ScalarDB 3.14** | ✅              | ✅              |

</TabItem>
<TabItem value="Amazon_Aurora_PostgreSQL" label="Amazon Aurora PostgreSQL">

| Version           | Aurora PostgreSQL 17 | Aurora PostgreSQL 16 | Aurora PostgreSQL 15 | Aurora PostgreSQL 14 | Aurora PostgreSQL 13 |
|:------------------|:---------------------|:---------------------|:---------------------|:---------------------|:---------------------|
| **ScalarDB 3.18** | ✅                    | ✅                    | ✅                    | ✅                    | ✅                    |
| **ScalarDB 3.17** | ✅                    | ✅                    | ✅                    | ✅                    | ✅                    |
| **ScalarDB 3.16** | ✅                    | ✅                    | ✅                    | ✅                    | ✅                    |
| **ScalarDB 3.15** | ✅                    | ✅                    | ✅                    | ✅                    | ✅                    |
| **ScalarDB 3.14** | ✅                    | ✅                    | ✅                    | ✅                    | ✅                    |

</TabItem>
<TabItem value="Spanner" label="Spanner (PostgreSQL dialect)">

| Version           | Spanner (PostgreSQL dialect) |
|:------------------|:--------|
| **ScalarDB 3.18** | ✅       |
| **ScalarDB 3.17** | ❌       |
| **ScalarDB 3.16** | ❌       |
| **ScalarDB 3.15** | ❌       |
| **ScalarDB 3.14** | ❌       |

:::note

ScalarDB works only for [Spanner database with the PostgreSQL dialect](https://docs.cloud.google.com/spanner/docs/create-manage-databases).

:::

</TabItem>
<TabItem value="TiDB" label="TiDB">

| Version           | TiDB 8.5 | TiDB 7.5 | TiDB 6.5 |
|:------------------|:---------|:---------|----------|
| **ScalarDB 3.18** | ✅        | ✅        | ✅        |
| **ScalarDB 3.17** | ✅        | ✅        | ✅        |
| **ScalarDB 3.16** | ❌        | ❌        | ❌        |
| **ScalarDB 3.15** | ❌        | ❌        | ❌        |
| **ScalarDB 3.14** | ❌        | ❌        | ❌        |

</TabItem>
<TabItem value="YugabyteDB" label="YugabyteDB">

|      Version      | YugabyteDB 2 |
| :---------------- | :----------- |
| **ScalarDB 3.18** | ✅            |
| **ScalarDB 3.17** | ✅            |
| **ScalarDB 3.16** | ✅            |
| **ScalarDB 3.15** | ✅            |
| **ScalarDB 3.14** | ✅            |

</TabItem>
</Tabs>

#### NoSQL databases

<Tabs groupId="NoSQL" queryString>
<TabItem value="Amazon_DynamoDB" label="Amazon DynamoDB" default>

|      Version      | DynamoDB |
| :---------------- | :------- |
| **ScalarDB 3.18** | ✅        |
| **ScalarDB 3.17** | ✅        |
| **ScalarDB 3.16** | ✅        |
| **ScalarDB 3.15** | ✅        |
| **ScalarDB 3.14** | ✅        |

</TabItem>
<TabItem value="Apache_Cassandra" label="Apache Cassandra">

|      Version      | Cassandra 5.0 | Cassandra 4.1 | Cassandra 3.11 | Cassandra 3.0 |
| :---------------- |:--------------|:--------------| :------------- | :------------ |
| **ScalarDB 3.18** | ✅             | ✅             | ✅              | ✅             |
| **ScalarDB 3.17** | ✅             | ✅             | ✅              | ✅             |
| **ScalarDB 3.16** | ✅             | ✅             | ✅              | ✅             |
| **ScalarDB 3.15** | ✅             | ✅             | ✅              | ✅             |
| **ScalarDB 3.14** | ✅             | ✅             | ✅              | ✅             |

</TabItem>
<TabItem value="Azure_Cosmos_DB_for_NoSQL" label="Azure Cosmos DB for NoSQL">

|      Version      | Cosmos DB for NoSQL |
| :---------------- | :------------------ |
| **ScalarDB 3.18** | ✅                   |
| **ScalarDB 3.17** | ✅                   |
| **ScalarDB 3.16** | ✅                   |
| **ScalarDB 3.15** | ✅                   |
| **ScalarDB 3.14** | ✅                   |

</TabItem>
</Tabs>

#### Object Storage

:::note

Object Storage support is currently in Private Preview. For more details, please [contact us](https://www.scalar-labs.com/contact) or wait for this feature to become publicly available in a future version.

:::

<Tabs>
<TabItem value="Amazon_S3" label="Amazon S3">

|      Version      | S3 |
| :---------------- | :------------------ |
| **ScalarDB 3.18** | ✅                   |
| **ScalarDB 3.17** | ✅                   |
| **ScalarDB 3.16** | ❌                   |
| **ScalarDB 3.15** | ❌                   |
| **ScalarDB 3.14** | ❌                   |

</TabItem>
<TabItem value="Azure_Blob_Storage" label="Azure Blob Storage">

|      Version      | Blob Storage |
| :---------------- | :------------------ |
| **ScalarDB 3.18** | ✅                   |
| **ScalarDB 3.17** | ✅                   |
| **ScalarDB 3.16** | ❌                   |
| **ScalarDB 3.15** | ❌                   |
| **ScalarDB 3.14** | ❌                   |

</TabItem>
<TabItem value="Google_Cloud_Storage" label="Google Cloud Storage">

|      Version      | Cloud Storage |
| :---------------- | :------------------ |
| **ScalarDB 3.18** | ✅                   |
| **ScalarDB 3.17** | ✅                   |
| **ScalarDB 3.16** | ❌                   |
| **ScalarDB 3.15** | ❌                   |
| **ScalarDB 3.14** | ❌                   |

</TabItem>
</Tabs>

:::note

For details on how to configure each database, see [Configurations for the Underlying Databases of ScalarDB](./database-configurations.mdx).

:::

### Database permission requirements

ScalarDB requires specific permissions to perform its operations on the underlying databases.

:::note

ScalarDB assumes that the same underlying database user account is used for all administrative and CRUD operations.

:::

#### Relational databases

This section describes the permission requirements for relational databases.

<Tabs groupId="relational-db-permissions" queryString>
<TabItem value="Db2" label="IBM Db2" default>

If you're using Db2, the following authority must be granted.

<Tabs groupId="db2-versions" queryString>
  <TabItem value="db2-12.1" label="Db2 12.1" default>
    - `DBADM`
  </TabItem>
  <TabItem value="db2-11.5" label="Db2 11.5">
    - `DBADM`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="MariaDB" label="MariaDB">

If you're using MariaDB, the following privileges must be granted.

<Tabs groupId="mariadb-versions" queryString>
  <TabItem value="mariadb-11.4" label="MariaDB 11.4" default>
    - `CREATE`
    - `CREATE VIEW`
    - `DROP`
    - `INDEX`
    - `ALTER`
    - `SELECT`
    - `INSERT`
    - `UPDATE`
    - `DELETE`
  </TabItem>
  <TabItem value="mariadb-10.11" label="MariaDB 10.11">
    - `CREATE`
    - `CREATE VIEW`
    - `DROP`
    - `INDEX`
    - `ALTER`
    - `SELECT`
    - `INSERT`
    - `UPDATE`
    - `DELETE`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="MySQL" label="MySQL">

If you're using MySQL, the following privileges must be granted.

<Tabs groupId="mysql-versions" queryString>
  <TabItem value="mysql-8.4" label="MySQL 8.4" default>
    - `CREATE`
    - `CREATE VIEW`
    - `DROP`
    - `INDEX`
    - `ALTER`
    - `SELECT`
    - `INSERT`
    - `UPDATE`
    - `DELETE`
  </TabItem>
  <TabItem value="mysql-8.0" label="MySQL 8.0">
    - `CREATE`
    - `CREATE VIEW`
    - `DROP`
    - `INDEX`
    - `ALTER`
    - `SELECT`
    - `INSERT`
    - `UPDATE`
    - `DELETE`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="Oracle_Database" label="Oracle Database">

If you're using Oracle Database, the following privileges must be granted.

<Tabs groupId="oracle-versions" queryString>
  <TabItem value="oracle-23ai" label="Oracle Database 23ai" default>
    - `CREATE SESSION`
    - `CREATE USER`
    - `DROP USER`
    - `ALTER USER`
    - `CREATE ANY TABLE`
    - `DROP ANY TABLE`
    - `CREATE ANY INDEX`
    - `ALTER ANY INDEX`
    - `DROP ANY INDEX`
    - `ALTER ANY TABLE`
    - `SELECT ANY TABLE`
    - `INSERT ANY TABLE`
    - `UPDATE ANY TABLE`
    - `DELETE ANY TABLE`
    - `CREATE ANY VIEW`
    - `DROP ANY VIEW`
  </TabItem>
  <TabItem value="oracle-21c" label="Oracle Database 21c">
    - `CREATE SESSION`
    - `CREATE USER`
    - `DROP USER`
    - `ALTER USER`
    - `CREATE ANY TABLE`
    - `DROP ANY TABLE`
    - `CREATE ANY INDEX`
    - `ALTER ANY INDEX`
    - `DROP ANY INDEX`
    - `ALTER ANY TABLE`
    - `SELECT ANY TABLE`
    - `INSERT ANY TABLE`
    - `UPDATE ANY TABLE`
    - `DELETE ANY TABLE`
    - `CREATE ANY VIEW`
    - `DROP ANY VIEW`
  </TabItem>
  <TabItem value="oracle-19c" label="Oracle Database 19c">
    - `CREATE SESSION`
    - `CREATE USER`
    - `DROP USER`
    - `ALTER USER`
    - `CREATE ANY TABLE`
    - `DROP ANY TABLE`
    - `CREATE ANY INDEX`
    - `ALTER ANY INDEX`
    - `DROP ANY INDEX`
    - `ALTER ANY TABLE`
    - `SELECT ANY TABLE`
    - `INSERT ANY TABLE`
    - `UPDATE ANY TABLE`
    - `DELETE ANY TABLE`
    - `CREATE ANY VIEW`
    - `DROP ANY VIEW`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="PostgreSQL" label="PostgreSQL">

If you're using PostgreSQL, the following database privilege must be granted.

<Tabs groupId="postgresql-versions" queryString>
  <TabItem value="postgresql-17" label="PostgreSQL 17" default>
    - `CREATE`
  </TabItem>
  <TabItem value="postgresql-16" label="PostgreSQL 16">
    - `CREATE`
  </TabItem>
  <TabItem value="postgresql-15" label="PostgreSQL 15">
    - `CREATE`
  </TabItem>
  <TabItem value="postgresql-14" label="PostgreSQL 14">
    - `CREATE`
  </TabItem>
  <TabItem value="postgresql-13" label="PostgreSQL 13">
    - `CREATE`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="SQL_Server" label="SQL Server">

If you're using SQL Server, the following database permissions must be granted.

<Tabs groupId="sqlserver-versions" queryString>
  <TabItem value="sqlserver-2022" label="SQL Server 2022" default>
    - `CREATE SCHEMA`
    - `CREATE TABLE`
    - `CREATE VIEW`
  </TabItem>
  <TabItem value="sqlserver-2019" label="SQL Server 2019">
    - `CREATE SCHEMA`
    - `CREATE TABLE`
    - `CREATE VIEW`
  </TabItem>
  <TabItem value="sqlserver-2017" label="SQL Server 2017">
    - `CREATE SCHEMA`
    - `CREATE TABLE`
    - `CREATE VIEW`
  </TabItem>
</Tabs>

</TabItem>
</Tabs>

#### NewSQL databases

This section describes the permission requirements for NewSQL databases.

<Tabs groupId="newsql-db-permissions" queryString>
<TabItem value="AlloyDB" label="AlloyDB" default>

If you're using AlloyDB, the following database privilege must be granted.

<Tabs groupId="alloydb-versions" queryString>
  <TabItem value="alloydb-16" label="AlloyDB 16" default>
    - `CREATE`
  </TabItem>
  <TabItem value="alloydb-15" label="AlloyDB 15">
    - `CREATE`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="Spanner" label="Spanner">

If you're using Spanner, the following role must be granted:

- `roles/spanner.databaseUser`

</TabItem>
<TabItem value="TiDB" label="TiDB">

If you're using TiDB, the following privileges must be granted.

<Tabs groupId="tidb-versions" queryString>
  <TabItem value="tidb-8.5" label="TiDB 8.5" default>
    - `CREATE`
    - `CREATE VIEW`
    - `DROP`
    - `INDEX`
    - `ALTER`
    - `SELECT`
    - `INSERT`
    - `UPDATE`
    - `DELETE`
  </TabItem>
  <TabItem value="tidb-7.5" label="TiDB 7.5">
    - `CREATE`
    - `CREATE VIEW`
    - `DROP`
    - `INDEX`
    - `ALTER`
    - `SELECT`
    - `INSERT`
    - `UPDATE`
    - `DELETE`
  </TabItem>
  <TabItem value="tidb-6.5" label="TiDB 6.5">
    - `CREATE`
    - `CREATE VIEW`
    - `DROP`
    - `INDEX`
    - `ALTER`
    - `SELECT`
    - `INSERT`
    - `UPDATE`
    - `DELETE`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="YugabyteDB" label="YugabyteDB">

If you're using YugabyteDB, the following database privilege must be granted.

- `CREATE`

</TabItem>
</Tabs>

#### NoSQL databases

This section describes the permission requirements for NoSQL databases.

<Tabs groupId="nosql-db-permissions" queryString>
<TabItem value="Amazon_DynamoDB" label="Amazon DynamoDB" default>

If you're using Amazon DynamoDB, the following actions must be granted.

- `dynamodb:ConditionCheckItem`
- `dynamodb:PutItem`
- `dynamodb:ListTables`
- `dynamodb:DeleteItem`
- `dynamodb:Scan`
- `dynamodb:Query`
- `dynamodb:UpdateItem`
- `dynamodb:DeleteTable`
- `dynamodb:UpdateContinuousBackups`
- `dynamodb:CreateTable`
- `dynamodb:DescribeTable`
- `dynamodb:GetItem`
- `dynamodb:DescribeContinuousBackups`
- `dynamodb:UpdateTable`
- `application-autoscaling:RegisterScalableTarget`
- `application-autoscaling:DeleteScalingPolicy`
- `application-autoscaling:PutScalingPolicy`
- `application-autoscaling:DeregisterScalableTarget`
- `application-autoscaling:TagResource`

</TabItem>
<TabItem value="Apache_Cassandra" label="Apache Cassandra">

If you're using Apache Cassandra, the following privileges must be granted.

<Tabs groupId="cassandra-versions" queryString>
  <TabItem value="cassandra-5.0" label="Cassandra 5.0" default>
    - `CREATE`
    - `DROP`
    - `ALTER`
    - `SELECT`
    - `MODIFY`
  </TabItem>
  <TabItem value="cassandra-4.1" label="Cassandra 4.1">
    - `CREATE`
    - `DROP`
    - `ALTER`
    - `SELECT`
    - `MODIFY`
  </TabItem>
  <TabItem value="cassandra-3.11" label="Cassandra 3.11">
    - `CREATE`
    - `DROP`
    - `ALTER`
    - `SELECT`
    - `MODIFY`
  </TabItem>
  <TabItem value="cassandra-3.0" label="Cassandra 3.0">
    - `CREATE`
    - `DROP`
    - `ALTER`
    - `SELECT`
    - `MODIFY`
  </TabItem>
</Tabs>

</TabItem>
<TabItem value="Azure_Cosmos_DB_for_NoSQL" label="Azure Cosmos DB for NoSQL">

ScalarDB requires an Azure Cosmos DB key, which has full access to Azure Cosmos DB for NoSQL, for authentication.

</TabItem>
</Tabs>

#### Object Storage

This section describes the permission requirements for object storage.

<Tabs groupId="object-storage-permissions" queryString>
<TabItem value="Amazon_S3" label="Amazon S3" default>

If you're using Amazon S3 as Object Storage, the following actions must be granted:

- `s3:PutObject`
- `s3:GetObject`
- `s3:DeleteObject`
- `s3:ListBucket`

</TabItem>
<TabItem value="Azure_Blob_Storage" label="Azure Blob Storage">

ScalarDB requires an access key, which has full access to Azure Blob Storage, for authentication.

</TabItem>
<TabItem value="Google_Cloud_Storage" label="Google Cloud Storage">

If you're using Google Cloud Storage as Object Storage, the following role must be granted:

- `Storage Object Admin (roles/storage.objectAdmin)`

</TabItem>
</Tabs>

## Cluster

ScalarDB Cluster is a component that provides a clustering solution for the Core component to work as a clustered server. For more information, see [ScalarDB Design](./design.mdx).

### Languages and runtimes

ScalarDB Cluster provides Java and .NET client SDKs that wrap gRPC-generated clients for ease of use.

#### Java

The Java client SDK for ScalarDB Cluster is available on the Maven Central Repository. You can add the library as a build dependency to your application by using Gradle or Maven. For more details, see [Add ScalarDB Cluster Java Client SDK to your build](scalardb-cluster/developer-guide-for-scalardb-cluster-with-java-api.mdx#add-scalardb-cluster-java-client-sdk-to-your-build).

For building applications that integrate with the library, the following Java Development Kits (JDKs) are verified and supported:

<JDKVersions versionNumbers="8, 11, 17, or 21" />

:::note

The ScalarDB Cluster Embedding Java Client SDK library requires Java 17 or 21 from one of the vendors listed above.

:::

#### .NET

The .NET client SDK for ScalarDB Cluster is available as a NuGet package. For more details, see [Install the SDK](scalardb-cluster-dotnet-client-sdk/getting-started-with-distributed-transactions.mdx#install-the-sdk).

For building applications that integrate with the library, the following .NET versions are verified and supported:

- [.NET 8.0](https://dotnet.microsoft.com/en-us/download/dotnet/8.0)
- [.NET 6.0](https://dotnet.microsoft.com/en-us/download/dotnet/6.0)

#### Other languages

Since ScalarDB Cluster uses gRPC, you can also create your own client in your preferred language by using the generated clients from the proto file. If you need the proto file, please [contact support](https://www.scalar-labs.com/support).

### Databases

Since ScalarDB Cluster uses Core to interact with databases, the requirements for databases are the same as those for Core. For more information, see [Databases](#databases).

### Required ports

ScalarDB Cluster requires the following ports to be accessible. These default port numbers can be configured via the corresponding properties as needed:

- 60053 (Administrative API / Transaction API / SQL API / administrator service; configurable via `scalar.db.cluster.node.port`)
- 60054 (internal gRPC communication between cluster nodes; configurable via `scalar.db.cluster.internal.node.port`. This port only needs to be reachable between cluster nodes and should typically be restricted from client and public networks.)
- 8080 (GraphQL; configurable via `scalar.db.graphql.port`)
- 9080 (metrics; configurable via `scalar.db.cluster.node.prometheus_exporter_port`)

:::note

If you configure `scalar.db.cluster.node.admin.port` to run the administrator service (`pause`, `unpause`, and `checkPaused`) on a dedicated port, that dedicated port will also need to be accessible. In this case, only the administrator service runs on that port instead of the port specified by `scalar.db.cluster.node.port`; the port specified by `scalar.db.cluster.node.port` must still remain accessible for the other gRPC APIs, including the Administrative API, Transaction API, and SQL API.

:::

### Kubernetes

ScalarDB Cluster is provided as a cluster consisting of one or more Pods on the Kubernetes platform in production environments. ScalarDB Cluster supports the following platforms and tools.

#### Platform

- **[Kubernetes](https://kubernetes.io/):** 1.33 - 1.36
  - **[Amazon Elastic Kubernetes Service (EKS)](https://aws.amazon.com/eks/)**
  - **[Azure Kubernetes Service (AKS)](https://azure.microsoft.com/en-us/products/kubernetes-service)**
- **[Red Hat OpenShift](https://www.redhat.com/en/technologies/cloud-computing/openshift):** 4.18 - 4.22

  :::note

  - ScalarDB Cluster does not support Extended Update Support (EUS) versions of **Red Hat OpenShift**.
  - ScalarDB Cluster for Red Hat OpenShift is provided as a container image based on Red Hat Universal Base Images (UBI), which uses Red Hat Build of OpenJDK.
  - If you plan to use Red Hat OpenShift, it is your responsibility to ensure you have a valid subscription. Please contact Red Hat directly for more information. Red Hat offers various subscription options for Red Hat OpenShift, and you may also need to purchase a separate subscription for Red Hat Build of OpenJDK.

  :::

#### Package manager

- **[Helm](https://helm.sh/):** 3.5+

## Analytics

ScalarDB Analytics is a component that provides scalable analytical processing for the data managed by the Core component or managed by applications that don't use ScalarDB. For more information, see [ScalarDB Design](./design.mdx).

### Spark

ScalarDB Analytics uses [Apache Spark](https://spark.apache.org/) for the query engine. It supports the following versions of Spark. Cloud-managed Spark services, such as Amazon EMR, Azure Synapse Analytics, and Databricks, are also supported as long as they use the Spark versions listed in the following table.

| ScalarDB Analytics Version | Spark Versions | Scala Versions |
| :------------------------- | :------------- | :------------- |
| 3.18                       | 3.5, 3.4       | 2.13, 2.12     |
| 3.17                       | 3.5, 3.4       | 2.13, 2.12     |
| 3.16                       | 3.5, 3.4       | 2.13, 2.12     |
| 3.15                       | 3.5, 3.4       | 2.13, 2.12     |
| 3.14                       | 3.5, 3.4       | 2.13, 2.12     |

### Languages and runtimes

ScalarDB Analytics provides a library for running federated queries on Spark. It also provides a tool called ScalarDB Analytics CLI, which runs on the Java Virtual Machine (JVM).

The library is available on the Maven Central Repository. You need to specify the library when setting up Spark. For more details, see [Set up ScalarDB Analytics in the Spark configuration](scalardb-analytics/run-analytical-queries.mdx#set-up-scalardb-analytics-in-the-spark-configuration).

:::note

Since Spark and Scala may be incompatible among different minor versions, the library offers different artifacts for various Spark and Scala versions, named in the format `scalardb-analytics-spark-all-<SPARK_VERSION>_<SCALA_VERSION>`. Make sure that you select the artifact matching the Spark and Scala versions you're using. For example, if you're using Spark 3.5 with Scala 2.13, you must specify `scalardb-analytics-spark-all-3.5_2.13`.

:::

#### Java

For using the library on Spark, the following JREs are verified and supported:

<JDKVersions versionNumbers="8, 11, or 17" />

:::note

The Java runtime versions available for Spark on each cloud service are based on those supported by Apache Spark. For reference, the following shows the Spark service versions and corresponding Java runtime versions on major cloud services:

- **Amazon EMR:** EMR 7.x: Spark 3.5 (Java 17); EMR 6.x: Spark 3.4 (Java 8)
- **Azure Synapse Analytics:** Spark 3.5 (Java 17); Spark 3.4 (Java 11)
- **Databricks:** Runtime 16.4 LTS: Spark 3.5 (Java 17); Runtime 15.4 LTS: Spark 3.5 (Java 8); Runtime 14.3 LTS: Spark 3.5 (Java 8); Runtime 13.3 LTS: Spark 3.4 (Java 8)

For detailed information, please refer to the documentation for the cloud service you are using.

:::

For running ScalarDB Analytics CLI, the following JREs are verified and supported:

<JDKVersions versionNumbers="8, 11, 17, or 21" />

### Databases

ScalarDB Analytics runs on top of the following databases and their versions.

#### ScalarDB

ScalarDB Analytics can run analytical queries on the databases managed by ScalarDB Core and Cluster. It uses the ScalarDB Core library of the same version to interact with these databases, as shown below.

| ScalarDB Analytics version | ScalarDB Core version |
| :------------------------- | :-------------------- |
| 3.18                       | 3.18                  |
| 3.17                       | 3.17                  |
| 3.16                       | 3.16                  |
| 3.15                       | 3.15                  |
| 3.14                       | 3.14                  |

For the supported databases and their versions, see [Databases](#databases).

#### Relational databases

ScalarDB Analytics can run analytical queries on the following relational databases **not** managed by ScalarDB Core and Cluster.

<Tabs groupId="RDBs" queryString>
<TabItem value="MySQL" label="MySQL" default>

|           Version           | MySQL 8.4 | MySQL 8.0 |
| :-------------------------- | :-------- | :-------- |
| **ScalarDB Analytics 3.18** | ✅        | ✅        |
| **ScalarDB Analytics 3.17** | ✅        | ✅        |
| **ScalarDB Analytics 3.16** | ❌        | ✅        |
| **ScalarDB Analytics 3.15** | ❌        | ✅        |
| **ScalarDB Analytics 3.14** | ❌        | ✅        |

</TabItem>
<TabItem value="Oracle_Database" label="Oracle Database">

|      Version                | Oracle Database 23ai | Oracle Database 21c | Oracle Database 19c |
| :-------------------------- | :------------------- | :------------------ | :------------------ |
| **ScalarDB Analytics 3.18** | ✅                   | ✅                  | ✅                  |
| **ScalarDB Analytics 3.17** | ✅                   | ✅                  | ✅                  |
| **ScalarDB Analytics 3.16** | ✅                   | ❌                  | ❌                  |
| **ScalarDB Analytics 3.15** | ✅                   | ❌                  | ❌                  |
| **ScalarDB Analytics 3.14** | ✅                   | ❌                  | ❌                  |

</TabItem>

<TabItem value="PostgreSQL" label="PostgreSQL">

|           Version           | PostgreSQL 18 | PostgreSQL 17 | PostgreSQL 16 |
| :-------------------------- | :------------ | :------------ | :------------ |
| **ScalarDB Analytics 3.18** | ✅            | ✅            | ✅            |
| **ScalarDB Analytics 3.17** | ✅            | ✅            | ✅            |
| **ScalarDB Analytics 3.16** | ❌            | ❌            | ✅            |
| **ScalarDB Analytics 3.15** | ❌            | ❌            | ✅            |
| **ScalarDB Analytics 3.14** | ❌            | ❌            | ✅            |

</TabItem>
<TabItem value="SQL_Server" label="SQL Server">

|           Version           | SQL Server 2022 | SQL Server 2019 | SQL Server 2017 |
| :-------------------------- | :-------------- | :-------------- | :-------------- |
| **ScalarDB Analytics 3.18** | ✅              | ✅              | ✅              |
| **ScalarDB Analytics 3.17** | ✅              | ✅              | ✅              |
| **ScalarDB Analytics 3.16** | ❌              | ✅              | ❌              |
| **ScalarDB Analytics 3.15** | ❌              | ✅              | ❌              |
| **ScalarDB Analytics 3.14** | ❌              | ✅              | ❌              |

</TabItem>
</Tabs>

#### NoSQL databases

ScalarDB Analytics can run analytical queries on the following NoSQL databases **not** managed by ScalarDB Core and Cluster.

<Tabs groupId="NoSQL" queryString>
<TabItem value="Amazon_DynamoDB" label="Amazon DynamoDB" default>

|           Version           | DynamoDB |
| :-------------------------- | :------- |
| **ScalarDB Analytics 3.18** | ✅        |
| **ScalarDB Analytics 3.17** | ✅        |
| **ScalarDB Analytics 3.16** | ✅        |
| **ScalarDB Analytics 3.15** | ✅        |
| **ScalarDB Analytics 3.14** | ✅        |

</TabItem>
</Tabs>

#### Analytical platforms

ScalarDB Analytics can run analytical queries on the following analytical platforms **not** managed by ScalarDB Core and Cluster.

<Tabs groupId="analytical-platforms" queryString>
<TabItem value="databricks" label="Databricks" default>

|           Version           | Databricks |
| :-------------------------- | :--------- |
| **ScalarDB Analytics 3.18** | ✅         |
| **ScalarDB Analytics 3.17** | ✅         |
| **ScalarDB Analytics 3.16** | ✅         |
| **ScalarDB Analytics 3.15** | ❌         |
| **ScalarDB Analytics 3.14** | ❌         |

:::note

ScalarDB Analytics supports running queries on Databricks by using both SQL warehouses and compute. For compute, all default compute policies are supported.

:::

</TabItem>
<TabItem value="snowflake" label="Snowflake">

|           Version           | Snowflake |
| :-------------------------- | :-------- |
| **ScalarDB Analytics 3.18** | ✅        |
| **ScalarDB Analytics 3.17** | ✅        |
| **ScalarDB Analytics 3.16** | ✅        |
| **ScalarDB Analytics 3.15** | ❌        |
| **ScalarDB Analytics 3.14** | ❌        |

</TabItem>
</Tabs>

#### ScalarDB Analytics server database

The ScalarDB Analytics server manages catalog information in its database using ScalarDB Core. You can use any database supported by ScalarDB Core for this purpose. For the supported databases and their versions, see [Databases](#databases).

### Database permission requirements

ScalarDB Analytics requires read permissions to perform its operations on the underlying databases.

For databases managed under ScalarDB Core and Cluster, the databases are already configured according to [Database permission requirements](#database-permission-requirements), so no additional configuration is required.

For databases **not** managed under ScalarDB Core and Cluster, make sure you register your data sources with users who have read permission on the data sources. For instructions on registering your data sources, see [Create your catalog](scalardb-analytics/create-scalardb-analytics-catalog.mdx#create-your-catalog).

Since ScalarDB Analytics server uses ScalarDB Core to manage catalog information, you need to configure a database user for ScalarDB Analytics server according to the [Database permission requirements](#database-permission-requirements) documentation for ScalarDB Core.

### Required ports

ScalarDB Analytics requires the following ports to be accessible. These default port numbers can be configured as needed:

- 11051 (catalog service)
- 11052 (metering service)
- The port number that Apache Spark uses depends on how you deploy the Spark cluster. For details on which ports you need to make accessible, please refer to your Spark service provider's documentation.

### Kubernetes

The server component of ScalarDB Analytics (ScalarDB Analytics server) is provided as a Pod on the Kubernetes platform in production environments. ScalarDB Analytics supports the following platforms and tools.

#### Platform

- **[Kubernetes](https://kubernetes.io/):** 1.33 - 1.36
  - **[Amazon Elastic Kubernetes Service (EKS)](https://aws.amazon.com/eks/)**
  - **[Azure Kubernetes Service (AKS)](https://azure.microsoft.com/en-us/products/kubernetes-service)**
- **[Red Hat OpenShift](https://www.redhat.com/en/technologies/cloud-computing/openshift):** TBD

#### Package manager

- **[Helm](https://helm.sh/):** 3.5+
